--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <header>
       <!-- navbar -->
       <img src="logo.png" alt="logo here" class="leftnavbar" />
-      <a href="#" id="active" class="rightnavbar">HOME</a>
-      <a href="#about" class="rightnavbar">ABOUT</a>
-      <a href="#work" class="rightnavbar">WORK</a>
-      <a href="#team" class="rightnavbar">TEAM</a>
-      <a href="#services" class="rightnavbar">SERVICES</a>
-      <a href="#features" class="rightnavbar">FEATURES</a>
-      <a href="#contact" class="rightnavbar">CONTACT</a>
+      <div class="rightnavbar">
+        <a href="#" id="active">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#work">WORK</a>
+        <a href="#team">TEAM</a>
+        <a href="#services">SERVICES</a>
+        <a href="#features">FEATURES</a>
+        <a href="#contact">CONTACT</a>
+      </div>
     </header>
     <section>
+      <!-- banner -->
       <div id="banner">
         <div class="box">
           <h2>WELCOME TO OUR MARKETPLACE</h2>
@@ -42,112 +45,12 @@
           <input type="button" value="VIDEO TOUR" class="button" />
         </div>
       </div>
-      <div id="about">
-        <h2>WE ARE MODEST.</h2>
-        <section class="flex-container" style="display: flex">
-          <div
-            class="leftabout"
-            style="
-              display: inline-block;
-              width: 600px;
-              align-content: center;
-              text-align: left;
-            "
-          >
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-              corporis, harum quasi iusto praesentium doloremque, enim
-              voluptatibus odio, veniam ullam laudantium dignissimos sunt eos
-              aperiam? Voluptatibus minima molestiae fugit blanditiis.
-            </p>
-            <p>
-              Lorem ipsum dolor
-              <strong>sit amet consectetur adipisicing elit</strong>.
-              Repellendus necessitatibus tempora fugiat ab, illum facere aliquam
-              nulla quisquam eaque fuga aut dolores voluptas tempore nobis vel
-              corrupti accusamus placeat eveniet!
-            </p>
-            <div class="abouticon">
-              <i class="fab fa-facebook-f" id="aboutsocial"></i>
-              <i class="fab fa-twitter" id="aboutsocial"></i>
-              <i class="fab fa-google" id="aboutsocial"></i>
-              <i class="fab fa-dribbble" id="aboutsocial"></i>
-              <i class="fab fa-behance" id="aboutsocial"></i>
-            </div>
-          </div>
-
-          <div class="aboutright" style="width: 600px">
-            <div style="display: flex; padding: 20px; flex-direction: row">
-              <p
-                style="
-                  padding: 5px;
-                  border: 1px solid #23b7a4;
-                  background-color: #23b7a4;
-                  color: white;
-                "
-              >
-                01
-              </p>
-              <div style="margin: 2px; text-align: left">
-                <h3 style="padding: 0 10px">Dedication to the customers</h3>
-                <p>
-                  Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae
-                  tristique nisi, vitae ullamcorper risus. Nam porttitor blandit
-                  ultricies.
-                </p>
-              </div>
-            </div>
-
-            <div style="display: flex; padding: 20px; flex-direction: row">
-              <p
-                style="
-                  padding: 5px;
-                  border: 1px solid #23b7a4;
-                  background-color: #23b7a4;
-                  color: white;
-                "
-              >
-                02
-              </p>
-              <div style="margin: 2px; text-align: left">
-                <h3 style="padding: 0 10px">
-                  working closely with our clients
-                </h3>
-                <p>
-                  Sed blandit nisi urna, sed pellentesque enim consectetur
-                  vitae. Suspendisse ut vehicula nibh.
-                </p>
-              </div>
-            </div>
-
-            <div style="display: flex; padding: 20px; flex-direction: row">
-              <p
-                style="
-                  padding: 5px;
-                  border: 1px solid #23b7a4;
-                  background-color: #23b7a4;
-                  color: white;
-                "
-              >
-                03
-              </p>
-              <div style="margin: 2px; text-align: left">
-                <h3 style="padding: 0 10px">increase happiness</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
-                  eleifend laoreet euismod.
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-
+      <!-- team -->
       <div id="team">
         <h2>MEET THE TEAM.</h2>
-        <div style="display: flex; margin: 40px">
+        <div class="teamrow">
           <div class="card">
-            <img src="t1.png" alt="" class="image" />
+            <img src="/images/t1.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa-brands fa-twitter"></i>
@@ -160,9 +63,9 @@
               <p class="desc">CEO and Founder</p>
             </div>
           </div>
-
+          
           <div class="card">
-            <img src="t2.png" alt="" class="image" />
+            <img src="/images/t2.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa-brands fa-twitter"></i>
@@ -177,7 +80,7 @@
           </div>
 
           <div class="card">
-            <img src="t3.png" alt="" class="image" />
+            <img src="/images/t3.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa-brands fa-twitter"></i>
@@ -192,7 +95,7 @@
           </div>
 
           <div class="card">
-            <img src="t4.png" alt="" class="image" />
+            <img src="/images/t4.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa-brands fa-twitter"></i>
@@ -207,99 +110,86 @@
           </div>
         </div>
       </div>
-
+      <!-- work -->
       <div id="work">
         <h2>LOVELY WORK.</h2>
         <div class="row">
           <div class="column">
-            <img src="work1.png" alt="" class="image" />
+            <img src="/images/work1.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="column">
-            <img src="work2.png" alt="" class="image" />
+            <img src="/images/work2.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="column">
-            <img src="work3.png" alt="" class="image" />
+            <img src="/images/work3.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="column">
-            <img src="work4.png" alt="" class="image" />
+            <img src="/images/work4.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon" title="add">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="column">
-            <img src="work5.png" alt="" class="image" />
+            <img src="/images/work5.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon" title="add">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="column">
-            <img src="work6.png" alt="" class="image" />
+            <img src="/images/work6.png" alt="" class="image" />
             <div class="overlay">
               <a href="#" class="icon" title="add">
                 <i class="fa fa-add"></i>
               </a>
-              <div class="title">
+              <!-- <div class="title">
                 <p>PARTNERSHIP GUIDELINES</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
-        <div style="text-align: center; padding: 20px">
-          <input
-            type="button"
-            value="SHOW ME MORE"
-            style="
-              padding: 20px;
-              background-color: transparent;
-              color: rgb(255, 255, 255);
-              border-color: rgb(255, 255, 255);
-              text-align: center;
-              justify-content: center;
-              align-content: center;
-              align-items: center;
-            "
-          />
+        <div class="btndiv">
+          <input class="btnshowme" type="button" value="SHOW ME MORE" />
         </div>
       </div>
-
+      <!-- services -->
       <div id="services">
         <h2>WHAT WE DO.</h2>
         <div class="servicecard">
-          <img src="cogs.png" alt="" srcset="" />
+          <img src="/images/cogs.png" alt="" srcset="" />
           <h5>EASY THEME SETUP</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -307,7 +197,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="pencil.png" alt="" srcset="" />
+          <img src="/images/pencil.png" alt="" srcset="" />
           <h5>PIXEL PERFECT DESIGN</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -315,7 +205,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="mobile.png" alt="" srcset="" />
+          <img src="/images/mobile.png" alt="" srcset="" />
           <h5>RESPONSIVE DESIGN</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -323,7 +213,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="clock.png" alt="" srcset="" />
+          <img src="/images/clock.png" alt="" srcset="" />
           <h5>24/7 SUPPORT</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -331,7 +221,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="cogs.png" alt="" srcset="" />
+          <img src="/images/cogs.png" alt="" srcset="" />
           <h5>EASY THEME SETUP</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -339,7 +229,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="pencil.png" alt="" srcset="" />
+          <img src="/images/pencil.png" alt="" srcset="" />
           <h5>PIXEL PERFECT DESIGN</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis justo commodo.
@@ -347,7 +237,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="mobile.png" alt="" srcset="" />
+          <img src="/images/mobile.png" alt="" srcset="" />
           <h5>RESPONSIVE DESIGN</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis commodo. Maecenas a
@@ -355,7 +245,7 @@
           </p>
         </div>
         <div class="servicecard">
-          <img src="clock.png" alt="" srcset="" />
+          <img src="/images/clock.png" alt="" srcset="" />
           <h5>24/7 SUPPORT</h5>
           <p>
             Nunc mattis lorem in leo lobortis, ut venenatis commodo. Maecenas a
@@ -363,10 +253,11 @@
           </p>
         </div>
       </div>
+      <!-- features -->
       <div id="features">
         <h2>FEATURES.</h2>
         <div class="featurecard">
-          <img src="feature1.png" alt="" srcset="" />
+          <img src="/images/feature1.png" alt="" srcset="" />
           <h5>Product Design: Eames Chairs</h5>
           <p>
             Eames designs are certainly iconic. Everyone of us know at least two
@@ -375,7 +266,7 @@
           </p>
         </div>
         <div class="featurecard">
-          <img src="feature2.png" alt="" srcset="" />
+          <img src="/images/feature2.png" alt="" srcset="" />
           <h5>Elegant and Colorful Logos</h5>
           <p>
             I have always found logo design to be one of the most challenging
@@ -384,7 +275,7 @@
           </p>
         </div>
         <div class="featurecard">
-          <img src="feature3.png" alt="" srcset="" />
+          <img src="/images/feature3.png" alt="" srcset="" />
           <h5>A Showcase of Creative</h5>
           <p>
             Its always interesting to see another designers take on a famous
@@ -395,49 +286,22 @@
       </div>
       <div id="contact">
         <h2>STAY IN TOUCH.</h2>
-        <img src="map.png" alt="" srcset="" />
-        <div class="leftright" style="display: flex; width: 100%">
-          <div class="info">
-            <h3>CONTACT INFORMATION</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi
-              metus, tristique nec dolor non, ornare sagittis dolor. Nulla
-              vestibulum lacus sed molestie gravida.
-            </p>
-            <p>
-              Cras fermentum elit quis magna congue, vel sodales arcu
-              vestibulum. Nunc lobortis dui magna, quis dapibus lacus
-            </p>
-          </div>
-
+        <img src="/images/map.png" alt="" srcset="" />
+        <div class="leftright">
           <form>
-            
             <label for="name">Your Name</label><br />
             <input type="text" id="name" name="name" /><br /><br />
             <label for="email">Your Email</label><br />
 
             <input type="email" id="email" name="email" /><br /><br />
             <label for="message">Your Message</label>
-            <textarea
-              name="message"
-              style="
-                width: 100%;
-                height: 150px;
-                padding: 12px 20px;
-                box-sizing: border-box;
-                border: 2px solid rgba(0, 0, 0, 0.466);
-                border-radius: 4px;
-                background-color: #eaeef1;
-                resize: none;
-              "
-            ></textarea>
-            <input type="button" value="SEND MESSAGE" />
+            <textarea class="message" name="message"></textarea>
+            <input type="button" value="SEND MESSAGE" class="btnsend" />
           </form>
         </div>
       </div>
     </section>
-    <!-- <aside></aside> -->
-    <!-- <article></article> -->
+    <!-- footer -->
     <footer>
       <p class="leftfooter">
         &copy;Copyright 2014 by PSD Booster.All Rights Reserved
